correct few things on mobile view

--- a/src/react/components/Components.style.less
+++ b/src/react/components/Components.style.less
@@ -612,7 +612,7 @@
 
     .mainProjectTitle {
       top: 70vh;
-      left: -5vw;
+      left: 5vw;
       font-size: 36px;
     }
 
@@ -1241,6 +1241,10 @@
   .flags {
     font-size: 30px !important;
     line-height: 30px !important;
+    @media screen and (max-width: 767px) {
+      font-size: 20px !important;
+      line-height: 20px !important;
+    }
   }
 }
 
